k8s/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-service
spec:
  type: NodePort
  selector:
    app: admin-service
  ports:
    - protocol: TCP
      port: 5004
      targetPort: 5004
      nodePort: 30004
