k8s/doctor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: doctor-service
spec:
  type: NodePort
  selector:
    app: doctor-service
  ports:
    - protocol: TCP
      port: 5003
      targetPort: 5003
      nodePort: 30007
